11. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- scanning / fixed
	- set media name automaticlly if / is selected
	- size of progressdialog fixed
	- hide read errors prepared
	- crash at start fixed

10. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- folter tree after import now works again
	- dont scan archive if disabled in config
	- option for display current scanned file (reading mediainfo, scanning archive) in tray added
	- help dialog reworked
	- load/save display current scanned file in tray fixed
	- display current scanned file (reading mediainfo, scanning archive) in tray also on rescan added
	- use tooltip instead popup at tray for current scanned file

08. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- possibility to disable mediainfo at compile time added
	- proper delete mediainfo handler at cdcat exit
	- display found lib7zip version at console output if debug is enabled
	- display info that lib7zip support is not compiled in at selreadable dialog if lib7zip was disabled at compile time
	- display info that mediainfo support is not compiled in at selreadable dialog if mediainfo was disabled at compile time
	- crash at close fixed
	- compile fix
	- warnings fixed
	- close mediainfo properly

06. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- sorting directories on listview fixed
	- resize colum of name colum at listview automaticlly to fit the text in it
	- crash on scanning special avi files fixed
	- missing free icon base on exit added

05. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- memleak fixes
	- version number of detected lib7zip on selreadable dialog added
	- type on adding new media fixed

01. May 2012 Christoph Thielecke <crissi99@gmx.de>
	- displaying type in directory tree fixed
	- sort order on treeview  and directory view now ascending be default
	- keep ".." entry always as first entry on sort listview
	- resize colum of name colum at treeview automaticlly to fit the text in it
